@@ -227,6 +227,7 @@ libspectrum_snap_alloc( void )
   libspectrum_snap_set_ulaplus_palette_enabled( snap, 0 );
   libspectrum_snap_set_ulaplus_current_register( snap, 0 );
   libspectrum_snap_set_ulaplus_palette( snap, 0, NULL );
+  libspectrum_snap_set_ulaplus_ff_register( snap, 0 );
 
   return snap;
 }
