@@ -964,3 +964,5 @@ hacking/ChangeLog: the small scale changelog for libspectrum
          Lee Tonks) (Fred).
 20140907 accessor.pl,snap_accessors.txt,snapshot.c,szx.c,z80.c: initial ULAplus
          code (part of patch #323) (Sergio).
+20151018 accessor.pl,snap_accessors.txt,snapshot.c,szx.c: implement ULAplus
+         Timex screen mode support (thanks, Andrew Owen and Fred) (Sergio).
